k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ravenx-web
spec:
  selector:
    app: ravenx-web
  ports:
  - port: 80
    targetPort: 80
